# iu

./: README.md  docker-compose.prod.yaml  docker-compose.yaml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  logging.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
backend/deploy/: Dockerfile
backend/scripts/: generate_settings_schema.py  parse_organizations.py
backend/src/: aware_timezone.py  config_schema.py  custom_pydantic.py  exceptions.py  logging_.py  typing_.py  utils.py
backend/src/api/: __main__.py  app.py  crud_routes_factory.py  custom_router_class.py  dependencies.py  docs.py  lifespan.py  routers.py
backend/src/modules/anonymize/: repository.py
backend/src/modules/chatting/: router.py
backend/src/modules/chatting/chat_queue/: repository.py  router.py  schemas.py
backend/src/modules/chatting/dialog/: repository.py  router.py  schemas.py
backend/src/modules/files/: repository.py  router.py  schemas.py
backend/src/modules/online/: repository.py  router.py
backend/src/modules/organization/: repository.py  router.py  schemas.py
backend/src/modules/providers/: router.py
backend/src/modules/providers/credentials/: repository.py  router.py  schemas.py
backend/src/modules/providers/telegram/: router.py  schemas.py
backend/src/modules/review/: repository.py  router.py  schemas.py
backend/src/modules/scene/: repository.py  router.py  schemas.py
backend/src/modules/user/: repository.py  router.py  schemas.py
backend/src/storages/mongo/: __init__.py  crud.py  schemas.py
backend/src/storages/mongo/models/: __base__.py  dialog.py  file.py  organization.py  review.py  scene.py  user.py
deploy/: nginx.conf
frontend/: .dockerignore  .env.example  Dockerfile  README.md  app.config.ts  app.vue  bun.lockb  eslint.config.js  nuxt.config.ts  orval.config.ts  package.json  pnpm-lock.yaml
frontend/api/: __generated__.ts  file.ts  form-data.ts  scenes.ts
frontend/assets/css/: main.css
frontend/components/: Card.vue  Chat.vue  ChatBubble.vue  ErrorPage.vue  OrganizationEditHeader.vue  OrganizationEditPage.vue  OrganizationPage.vue  OrganizationPanorama.vue  Panorama.vue  Rating.vue  ScenesCreateNew.vue  ScenesEditLocation.vue  ScenesEditPage.vue  TelegramConnect.vue  TelegramLogin.vue  TelegramLoginButton.vue  VuePannellum.vue
frontend/composables/: useChattingAsStudent.ts  useMe.ts
frontend/layouts/: default.vue
frontend/pages/: [org].vue  error.vue  index.vue  login.vue  orgs.vue  profile.vue
frontend/pages/[org]/: index.vue  (+1 more)
frontend/plugins/: vue-query.ts
frontend/utils/: messageDate.ts
(+4 files in other folders)
